[package]
name = "tests"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "common"
path = "src/lib/common.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
gravity_utils = { path = "../orchestrator/gravity_utils" }
log = "0.4"
onomy_test_lib = { path = "../../onomy_tests/onomy_test_lib" }
#reqwest = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
test_runner = { path = "../orchestrator/test_runner" }
tokio = { version = "1", default-features = false }

[features]
default = []
