[package]
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"
name = "cosmos_gravity"
version = "0.1.0"

[dependencies]
ethereum_gravity = { path = "../ethereum_gravity" }
gravity_proto = { path = "../gravity_proto/" }
gravity_utils = { path = "../gravity_utils" }

log = "0.4"
prost-types = "0.10"
serde = { version = "1", features = ["derive"] }
sha3 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = "0.7"
