[package]
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"
name = "ethereum_gravity"
version = "0.1.0"

[dependencies]
gravity_utils = { path = "../gravity_utils" }

log = "0.4"
num256 = "0.3"
sha3 = "0.10"
tokio = { version = "1.4", features = ["time"] }

[dev_dependencies]
rand = "0.8"
