[package]
authors = ["Justin Kilpatrick <justin@althea.net>"]
description = "Gravity Bridge Tools. User tooling for the Onomy Ethereum <=> Cosmos Gravtiy bridge"
edition = "2018"
homepage = "https://onomy.io/"
license = "Apache-2.0"
name = "gbt"
repository = "https://github.com/onomyprotocol/cosmos-gravity-bridge"
version = "0.5.6"

[dependencies]
cosmos_gravity = { path = "../cosmos_gravity" }
ethereum_gravity = { path = "../ethereum_gravity" }
gravity_proto = { path = "../gravity_proto" }
gravity_utils = { path = "../gravity_utils" }
metrics_exporter = { path = "../metrics_exporter" }
orchestrator = { path = "../orchestrator/" }
relayer = { path = "../relayer/" }

clap = { version = "3.0.0-rc.7", features = ["derive"] }
clarity = "0.5"
deep_space = "2.8"
dirs = "4.0"
env_logger = "0.9"
lazy_static = "1"
log = "0.4"
openssl-probe = "0.1"
prost = "0.9"
rand = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.4", features = ["macros", "rt-multi-thread"] }
toml = "0.5"
url = "2"
web30 = { git = "https://github.com/onomyprotocol/web30.git", rev = "0f96ccd53867bafe4c08ae59a1266ec0256e1cd4" }
