[package]
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"
name = "gravity_utils"
version = "0.1.0"

[dependencies]
clarity = { git = "https://github.com/onomyprotocol/clarity.git", rev = "3e875b608a2d9302c8b23dd40dc8705901db230c" }
deep_space = { git = "https://github.com/onomyprotocol/deep_space.git", rev = "36aa611a1ccfd4a48e1248d029a11cb026106254" }
gravity_proto = { path = "../gravity_proto/" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
sha3 = "0.10"
thiserror = "1.0.30"
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
tonic = "0.7"
u64_array_bigints = { version = "0.3", default-features = false, features = ["serde_support"] }
url = "2"
web30 = { git = "https://github.com/AaronKutch/web30.git", rev = "19e3ac9f95c8b8b1ac0f4bae020a3598d3158c87" }

[dev_dependencies]
rand = "0.8"
