[package]
name = "metrics_exporter"
version = "0.1.1"
edition = "2021"
authors = ["Max Nikolaev <maxn@amhost.net>"]

[lib]
name = "metrics_exporter"
path = "src/metrics_exporter.rs"

[dependencies]
gravity_utils = { path = "../gravity_utils" }

lazy_static = "1.4"
prometheus_exporter = { git = "https://github.com/jkilpatr/prometheus_exporter", rev = "c6a720a907db92a4d620d3fd54ac5bb656a1fad6" }
