[package]
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"
name = "relayer"
version = "0.4.3"

[lib]
name = "relayer"
path = "src/lib.rs"

[dependencies]
cosmos_gravity = { path = "../cosmos_gravity" }
ethereum_gravity = { path = "../ethereum_gravity" }
gravity_proto = { path = "../gravity_proto/" }
gravity_utils = { path = "../gravity_utils" }

futures = "0.3"
lazy_static = "1"
log = "0.4"
openssl-probe = "0.1"
rayon = "1.5.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
tonic = "0.6"
