[package]
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"
name = "test_runner"
version = "0.1.0"

# only becuase I like - more in names
[[bin]]
name = "test-runner"
path = "src/main.rs"

[dependencies]
cosmos_gravity = { path = "../cosmos_gravity" }
ethereum_gravity = { path = "../ethereum_gravity" }
gravity_proto = { path = "../gravity_proto/" }
gravity_utils = { path = "../gravity_utils" }
orchestrator = { path = "../orchestrator/" }

bytes = "1"
docopt = "1"
env_logger = "0.9"
futures = "0.3"
lazy_static = "1"
log = "0.4"
num = "0.4.0"
num256 = "0.3"
prost = "0.9"
prost-types = "0.9"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
tonic = "0.6"
url = "2"
