[package]
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"
name = "test_runner"
version = "0.1.0"

# only becuase I like - more in names
[[bin]]
name = "test-runner"
path = "src/main.rs"

[dependencies]
cosmos_gravity = { path = "../cosmos_gravity" }
ethereum_gravity = { path = "../ethereum_gravity" }
gravity_proto = { path = "../gravity_proto/" }
gravity_utils = { path = "../gravity_utils" }
orchestrator = { path = "../orchestrator/" }

bech32 = "0.9"
bytes = "1"
docopt = "1"
env_logger = "0.9"
futures = "0.3"
lazy_static = "1"
log = "0.4"
prost = "0.10"
prost-types = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
tonic = "0.7"
url = "2"
